// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifGrid should be shown correctly 1`] = `
<Fragment>
  <h3
    className="animate__bounceInRight"
  >
     
    alo
     
  </h3>
  <p
    className="animate_animated animate_flash"
  >
    'Cargando...'
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Testing GifGrid should show items when useFetchGifs images are loaded 1`] = `
<Fragment>
  <h3
    className="animate__bounceInRight"
  >
     
    alo
     
  </h3>
  <div
    className="card-grid"
  >
    <Component
      id="ABC"
      key="ABC"
      title="common"
      url="https://example.jpg"
    />
  </div>
</Fragment>
`;
